--- a/client/.babelrc
+++ b/client/.babelrc
@@ -7,6 +7,7 @@
         [
             "@babel/plugin-transform-runtime",
             {
+                "polyfill": false,
                 "regenerator": true
             }
         ],
