--- a/client/package.json
+++ b/client/package.json
@@ -135,6 +135,7 @@
         "localforage": "^1.7.1",
         "localforage-observable": "^1.4.0",
         "mapbox-gl": "^0.45.0",
+        "memoize-one": "^4.0.2",
         "prop-types": "^15.6.1",
         "raven-js": "^3.25.2",
         "react": "^16.3.2",
@@ -153,6 +154,7 @@
         "redux-persist": "^5.9.1",
         "redux-thunk": "^2.2.0",
         "reselect": "^3.0.1",
-        "svgsaver": "^0.9.0"
+        "svgsaver": "^0.9.0",
+        "turf": "^3.0.14"
     }
 }
