--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 backcall==0.1.0
 decorator==4.3.0
-Django==2.1
+Django==2.1.2
 django-cors-headers==2.4.0
 djangorestframework==3.8.2
 ipython==6.5.0
@@ -20,3 +20,5 @@ traitlets==4.3.2
 wcwidth==0.1.7
 xmltodict==0.11.0
 djangorestframework-camel-case==0.2.0
+pytest==3.9.3
+pytest-django==3.4.3
