--- a/client/package.json
+++ b/client/package.json
@@ -105,6 +105,8 @@
         "webpack-pwa-manifest": "^3.6.2"
     },
     "dependencies": {
+        "@togglecorp/faram": "^1.2.1",
+        "@togglecorp/fujs": "^1.8.1",
         "body-parser": "^1.18.3",
         "d3-area-label": "^1.4.0",
         "d3-array": "^1.2.1",
@@ -156,6 +158,7 @@
         "redux-thunk": "^2.2.0",
         "reselect": "^3.0.1",
         "resize-observer-polyfill": "^1.5.0",
+        "svg-injector": "^1.1.3",
         "svgsaver": "^0.9.0",
         "turf": "^3.0.14"
     }
