--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "scripts": {
         "start": "webpack-dev-server --mode development --config config/webpack.dev.js --env.NODE_ENV=development --history-api-fallback",
         "build": "webpack --mode production --config config/webpack.prod.js --env.NODE_ENV=production",
+        "build-dev": "webpack --mode development --config config/webpack.dev.js --env.NODE_ENV=development",
         "test": "jest",
         "test:watch": "jest --watch",
+        "typecheck": "tsc",
+        "lint": "eslint ./src --rule 'import/no-unresolved: 0'",
         "test:coverage": "jest --coverage",
         "vendor:clone": "./scripts/vendor-clone.sh"
     },
@@ -47,117 +50,122 @@
         ]
     },
     "devDependencies": {
-        "@babel/core": "7.0.0-beta.54",
-        "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
-        "@babel/plugin-proposal-decorators": "7.0.0-beta.54",
-        "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.54",
-        "@babel/plugin-proposal-function-sent": "7.0.0-beta.54",
-        "@babel/plugin-proposal-json-strings": "7.0.0-beta.54",
-        "@babel/plugin-proposal-numeric-separator": "7.0.0-beta.54",
-        "@babel/plugin-proposal-throw-expressions": "7.0.0-beta.54",
-        "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.54",
-        "@babel/plugin-syntax-import-meta": "7.0.0-beta.54",
-        "@babel/plugin-transform-runtime": "^7.0.0-beta.46",
-        "@babel/preset-env": "7.0.0-beta.54",
-        "@babel/preset-react": "^7.0.0-beta.46",
-        "@babel/runtime": "^7.0.0-beta.46",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.4.4",
+        "@babel/plugin-proposal-decorators": "^7.4.4",
+        "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+        "@babel/plugin-proposal-function-sent": "^7.2.0",
+        "@babel/plugin-proposal-json-strings": "^7.2.0",
+        "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+        "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/plugin-syntax-import-meta": "^7.2.0",
+        "@babel/plugin-transform-runtime": "^7.5.5",
+        "@babel/preset-env": "^7.4.5",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.3.3",
+        "@babel/runtime": "^7.5.5",
+        "@types/file-saver": "^2.0.1",
+        "@types/hoist-non-react-statics": "^3.3.1",
+        "@types/memoize-one": "^4.1.1",
+        "@types/reach__router": "^1.2.4",
+        "@types/react": "^16.8.24",
+        "@types/react-dom": "^16.8.5",
+        "@types/react-helmet": "5.0.8",
+        "@types/react-loadable": "^5.5.1",
+        "@types/react-redux": "^7.1.1",
+        "@types/react-router-dom": "^4.3.4",
+        "@typescript-eslint/eslint-plugin": "^1.13.0",
+        "@typescript-eslint/parser": "^1.13.0",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "^8.2.3",
-        "babel-jest": "^22.4.3",
-        "babel-loader": "^8.0.0-beta.0",
-        "babel-plugin-dynamic-import-node": "^1.2.0",
-        "babel-plugin-module-resolver": "^3.1.1",
+        "babel-eslint": "^10.0.2",
+        "babel-jest": "^24.8.0",
+        "babel-loader": "^8.0.6",
+        "babel-plugin-dynamic-import-node": "^2.3.0",
+        "babel-plugin-module-resolver": "^3.2.0",
+        "body-parser": "^1.19.0",
+        "cache-loader": "^4.1.0",
         "circular-dependency-plugin": "^5.0.2",
-        "clean-webpack-plugin": "^0.1.19",
-        "css-loader": "^0.28.11",
-        "enzyme": "^3.3.0",
-        "enzyme-adapter-react-16": "^1.1.1",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-import-resolver-babel-module": "^5.0.0-beta.0",
-        "eslint-loader": "^2.0.0",
-        "eslint-plugin-css-modules": "^2.7.5",
-        "eslint-plugin-import": "^2.11.0",
-        "eslint-plugin-jsx-a11y": "^6.0.3",
-        "eslint-plugin-react": "^7.7.0",
-        "eslint_d": "^5.3.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^5.0.4",
+        "css-loader": "^3.1.0",
+        "dotenv": "^8.0.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
+        "eslint": "^6.1.0",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-config-airbnb-base": "^13.2.0",
+        "eslint-import-resolver-babel-module": "^5.1.0",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-css-modules": "^2.11.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.14.3",
+        "eslint_d": "^8.0.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "file-loader": "^1.1.11",
+        "file-loader": "^4.1.0",
+        "fs": "^0.0.1-security",
+        "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^22.4.3",
-        "mini-css-extract-plugin": "^0.4.0",
+        "jest": "^24.8.0",
+        "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "4.7.2",
-        "optimize-css-assets-webpack-plugin": "^4.0.1",
-        "react-test-renderer": "^16.3.2",
-        "sass-loader": "^7.0.1",
-        "style-loader": "^0.21.0",
-        "stylelint": "^9.2.0",
-        "stylelint-config-concentric": "^2.0.0",
-        "stylelint-config-recommended-scss": "^3.2.0",
-        "stylelint-order": "^0.8.1",
-        "stylelint-scss": "^3.1.0",
-        "uglifyjs-webpack-plugin": "^1.2.5",
-        "webpack": "^4.8.1",
-        "webpack-cli": "^2.1.3",
-        "webpack-dev-server": "^3.1.4",
-        "webpack-merge": "^4.1.2",
-        "webpack-pwa-manifest": "^3.6.2"
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "react-test-renderer": "^16.8.6",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "stylelint": "^10.1.0",
+        "stylelint-config-concentric": "^2.0.2",
+        "stylelint-config-recommended-scss": "^3.3.0",
+        "stylelint-order": "^3.0.1",
+        "stylelint-scss": "^3.9.3",
+        "terser-webpack-plugin": "^1.4.1",
+        "typescript": "^3.5.3",
+        "webpack": "^4.39.1",
+        "webpack-bundle-analyzer": "^3.4.1",
+        "webpack-cli": "^3.3.6",
+        "webpack-dev-server": "^3.7.2"
     },
     "dependencies": {
+        "@reach/router": "^1.2.1",
         "@togglecorp/faram": "^1.2.1",
-        "@togglecorp/fujs": "^1.8.1",
-        "body-parser": "^1.18.3",
-        "d3-area-label": "^1.4.0",
-        "d3-array": "^1.2.1",
-        "d3-axis": "^1.0.8",
-        "d3-brush": "^1.0.4",
-        "d3-chord": "^1.0.4",
-        "d3-collection": "^1.0.4",
-        "d3-color": "^1.2.0",
-        "d3-drag": "^1.2.1",
-        "d3-ease": "^1.0.3",
-        "d3-force": "^1.1.0",
-        "d3-format": "^1.2.2",
-        "d3-hierarchy": "^1.1.6",
-        "d3-interpolate": "^1.2.0",
-        "d3-path": "^1.0.7",
-        "d3-sankey": "^0.7.1",
-        "d3-scale": "^2.0.0",
-        "d3-scale-chromatic": "^1.2.0",
-        "d3-selection": "^1.3.0",
-        "d3-shape": "^1.2.0",
-        "d3-transition": "^1.1.1",
-        "d3-voronoi": "^1.1.2",
-        "d3-zoom": "^1.7.1",
-        "express": "^4.16.3",
-        "fs": "^0.0.1-security",
-        "hoist-non-react-statics": "^2.5.0",
-        "immutability-helper": "^2.7.0",
-        "jwt-decode": "^2.2.0",
-        "localforage": "^1.7.1",
-        "localforage-observable": "^1.4.0",
-        "mapbox-gl": "^0.45.0",
-        "memoize-one": "^4.0.2",
-        "prop-types": "^15.6.1",
-        "raven-js": "^3.25.2",
-        "react": "^16.3.2",
-        "react-color": "^2.14.1",
-        "react-dom": "^16.3.2",
-        "react-focus-trap": "^2.5.0",
-        "react-ga": "^2.5.0",
-        "react-helmet": "^5.2.0",
-        "react-redux": "^5.0.7",
-        "react-resize-detector": "^2.3.0",
-        "react-router-dom": "^4.2.2",
-        "react-sortable-hoc": "^0.6.8",
-        "react-svg": "^3.0.2",
-        "redux": "^4.0.0",
-        "redux-mock-store": "^1.5.1",
-        "redux-persist": "^5.9.1",
-        "redux-thunk": "^2.2.0",
-        "reselect": "^3.0.1",
-        "resize-observer-polyfill": "^1.5.0",
+        "@togglecorp/fujs": "^1.8.0",
+        "@togglecorp/ravl": "^1.2.3",
+        "@togglecorp/react-rest-request": "^2.4.5",
+        "core-js": "3",
+        "d3-array": "^2.3.1",
+        "d3-axis": "^1.0.12",
+        "d3-hierarchy": "^1.1.8",
+        "d3-interpolate": "^1.3.2",
+        "d3-path": "^1.0.8",
+        "d3-scale": "^3.0.1",
+        "d3-scale-chromatic": "^1.4.0",
+        "d3-selection": "^1.4.0",
+        "d3-shape": "^1.3.5",
+        "d3-transition": "^1.2.0",
+        "hoist-non-react-statics": "^3.3.0",
+        "immer": "^3.2.0",
+        "immutability-helper": "^3.0.1",
+        "localforage": "^1.7.3",
+        "mapbox-gl": "^1.2.1",
+        "memoize-one": "^5.0.5",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.6",
+        "react-color": "^2.17.3",
+        "react-dom": "^16.8.6",
+        "react-focus-trap": "^2.7.1",
+        "react-helmet": "^5.2.1",
+        "react-loadable": "^5.5.0",
+        "react-redux": "^7.1.0",
+        "react-router-dom": "^5.0.1",
+        "react-sortable-hoc": "^1.9.1",
+        "redux": "^4.0.4",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-mock-store": "^1.5.3",
+        "redux-persist": "^5.10.0",
+        "reselect": "^4.0.0",
+        "resize-observer-polyfill": "^1.5.1",
         "svg-injector": "^1.1.3",
         "svgsaver": "^0.9.0",
         "turf": "^3.0.14"
