--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@babel/runtime": "^7.5.5",
+        "@babel/runtime-corejs3": "^7.5.5",
         "@types/file-saver": "^2.0.1",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/memoize-one": "^4.1.1",
