--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,6 +15,9 @@
     "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
+        "#redux": ["./src/redux"],
+        "#redux/*": ["./src/redux/*"],
+        "#rest": ["./src/rest"],
         "#components/*": ["./src/components/*"],
         "#config/*": ["./src/config/*"],
         "#constants": ["./src/constants"],
