--- a/server/deploy/configs/uwsgi.ini
+++ b/server/deploy/configs/uwsgi.ini
@@ -1,18 +1,11 @@
 [uwsgi]
 
 chdir = /code/
-module = server.wsgi
-home =  /venv/lib/python
+module = wv_dvs.wsgi
 
 master = true
 processes = 10
 http = 0.0.0.0:80
 chmod = 666
-plugins = /usr/lib/uwsgi/plugins/python3
-
+plugins = python3,http
 vacuum = true
-virtualenv = /venv/
-
-req-logger = file:/var/log/uwsgi/access.log
-logger = file:/var/log/uwsgi/error.log
-log-maxsize = 10240
