--- a/server/pytest.ini
+++ b/server/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = server.settings
-python_files = tests.py test_*.py *_tests.py
+DJANGO_SETTINGS_MODULE = wv_dvs.settings
