Add new report properties
* Add new API

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,22 +3,20 @@ FROM python:3.7.3-alpine
 MAINTAINER togglecorp info@togglecorp.com
 
 ENV PYTHONUNBUFFERED 1
-ENV PYTHON3 /usr/bin/python3
-ENV PIP3 /usr/bin/pip3
+ENV PYTHON3 /usr/local/bin/python3
+ENV PIP3 /usr/local/bin/pip3
 
 WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
 RUN apk add --no-cache --virtual .app-deps \
-        git bash gcc \
-        libxslt libpq coreutils \
-        uwsgi-python3 uwsgi-http \
+        git bash gcc libxslt libpq coreutils \
     && apk add --no-cache --virtual .build-deps \
-        gcc \
         subversion \
         python3-dev \
         musl-dev \
+        linux-headers \
         postgresql-dev \
         ca-certificates \
         libxml2-dev \
@@ -26,9 +24,7 @@ RUN apk add --no-cache --virtual .app-deps \
         zlib-dev \
     && $PIP3 install --upgrade pip \
     && $PIP3 install --no-cache-dir -r requirements.txt \
-    && apk del --no-cache .build-deps \
-    && printf "alias python3=$PYTHON3\nalias python=$PYTHON3\nalias pip=$PIP3\nalias pip3=$PIP3" >> ~/.bashrc \
-    && cp ~/.bashrc ~/.profile
+    && apk del --no-cache .build-deps
 
 COPY . /code/
 
