--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ Pygments==2.2.0
 backcall==0.1.0
 decorator==4.3.0
 django-cors-headers==2.4.0
+django-filter==2.2.0
 djangorestframework-camel-case==0.2.0
 djangorestframework>=3.9.1,<3.10
 ipython-genutils==0.2.0
@@ -20,5 +21,6 @@ pytz==2018.5
 simplegeneric==0.8.1
 six==1.11.0
 traitlets==4.3.2
+uwsgi
 wcwidth==0.1.7
 xmltodict==0.11.0
