--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 sudo: required
 
 services:
-    - docker
+  - docker
 
 before_install:
-    - docker pull devtc/worldvision-dvs:client-latest || true
-    - docker pull devtc/worldvision-dvs:server-latest || true
-    - touch .env
+  - docker pull devtc/worldvision-dvs:client-latest || true
+  - docker pull devtc/worldvision-dvs:server-latest || true
+  - touch .env
 
 before_script:
-    - ./scripts/travis/build.sh
+  - ./scripts/travis/build.sh
 
 script:
-    - docker-compose run --rm server bash /code/scripts/run_tests.sh
+  - docker-compose run --rm server bash /code/scripts/run_tests.sh
 
 after_success:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    - ./scripts/travis/push.sh
+  - echo "$GP_PASSWORD" | docker login docker.pkg.github.com -u "$GP_USERNAME" --password-stdin
+  - ./scripts/travis/push.sh
