--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,33 @@
 sudo: required
+language: generic
 
 services:
   - docker
 
 before_install:
-  - docker pull devtc/worldvision-dvs:client-latest || true
-  - docker pull devtc/worldvision-dvs:server-latest || true
+  - if [[ "$WV_BRANCH_NAME" = "develop" ]] ; then export WV_BRANCH_NAME=; fi
   - touch .env
+  - docker-compose pull || true
 
 before_script:
-  - ./scripts/travis/build.sh
+  - mkdir -p $(dirname "$REACT_STORE_DIR")
+  - git clone https://github.com/toggle-corp/react-store ${REACT_STORE_DIR}
+  - docker-compose build
 
 script:
   - docker-compose run --rm server bash /code/scripts/run_tests.sh
+  - echo "
+    REACT_APP_MAPBOX_ACCESS_TOKEN=${REACT_APP_MAPBOX_ACCESS_TOKEN}
+    REACT_APP_MAPBOX_STYLE=${REACT_APP_MAPBOX_STYLE}
+    " > .env
+  - docker-compose run --rm client bash -c 'yarn install && CI=false yarn build'
 
 after_success:
   - echo "$GP_PASSWORD" | docker login docker.pkg.github.com -u "$GP_USERNAME" --password-stdin
-  - ./scripts/travis/push.sh
+  - docker-compose build client  # With Build Files
+  - docker-compose push
+
+env:
+  global:
+    - REACT_STORE_DIR=client/src/vendor/react-store
+    - WV_BRANCH_NAME=`echo ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} | tr / _`
