--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,43 @@
 version: '3.2'
 
 services:
-    db:
-        image: postgres:9.6
-        volumes:
-            - postgres-data:/var/lib/postgresql/data
+  db:
+    image: postgres:9.6
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
-    server:
-        image: docker.pkg.github.com/toggle-corp/worldvision-dvs/server:latest
-        build:
-          context: ./server/
-          cache_from:
-            - devtc/worldvision-dvs:server-latest
-        env_file:
-            - .env
-        command: /code/scripts/run_develop.sh
-        volumes:
-            - ./server/:/code
-            - media:/media
-        ports:
-            - '8005:8005'
-        depends_on:
-            - db
+  server:
+    image: "docker.pkg.github.com/toggle-corp/worldvision-dvs/server:${WV_BRANCH_NAME:-develop}"
+    build:
+      context: ./server/
+      cache_from:
+        - "docker.pkg.github.com/toggle-corp/worldvision-dvs/server:${WV_BRANCH_NAME}"
+        - docker.pkg.github.com/toggle-corp/worldvision-dvs/server:develop
+    env_file:
+      - .env
+    command: /code/scripts/run_develop.sh
+    volumes:
+      - ./server/:/code
+      - media:/media
+    ports:
+      - '8005:8005'
+    depends_on:
+      - db
 
-    client:
-        image: docker.pkg.github.com/toggle-corp/worldvision-dvs/client:latest
-        build:
-          context: ./client/
-          cache_from:
-            - devtc/worldvision-dvs:client-latest
-        env_file:
-            - .env
-        command: bash -c '/code/scripts/run_develop.sh'
-        volumes:
-            - ./client/:/code
-        ports:
-            - '3005:3005'
+  client:
+    image: "docker.pkg.github.com/toggle-corp/worldvision-dvs/client:${WV_BRANCH_NAME:-develop}"
+    build:
+      context: ./client/
+      cache_from:
+        - "docker.pkg.github.com/toggle-corp/worldvision-dvs/client:${WV_BRANCH_NAME}"
+        - docker.pkg.github.com/toggle-corp/worldvision-dvs/client:develop
+    env_file:
+      - .env
+    command: bash -c '/code/scripts/run_develop.sh'
+    volumes:
+      - ./client/:/code
+    ports:
+      - '3005:3005'
 
 volumes:
   media:
