--- a/client/package.json
+++ b/client/package.json
@@ -111,7 +111,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^24.8.0",
         "mini-css-extract-plugin": "^0.7.0",
-        "node-sass": "4.7.2",
+        "node-sass": "^4.12.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "react-test-renderer": "^16.8.6",
         "sass-loader": "^7.1.0",
