--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
 Django>=2.1,<2.2
 Pygments==2.2.0
 backcall==0.1.0
+codecov==2.0.15
 decorator==4.3.0
 django-cors-headers==2.4.0
 django-filter==2.2.0
@@ -10,6 +11,7 @@ djangorestframework>=3.9.1,<3.10
 ipython-genutils==0.2.0
 ipython==6.5.0
 jedi==0.12.1
+parameterized==0.7.0
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
