--- a/client/package.json
+++ b/client/package.json
@@ -134,7 +134,7 @@
         "@togglecorp/fujs": "^1.8.1",
         "@togglecorp/ravl": "^1.2.3",
         "@togglecorp/react-rest-request": "^2.4.5",
-        "core-js": "^1.2.7",
+        "core-js": "3",
         "d3-array": "^2.3.1",
         "d3-axis": "^1.0.12",
         "d3-hierarchy": "^1.1.8",
