--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,7 +3,8 @@ FROM nginx:1.13
 RUN echo 'deb http://ftp.debian.org/debian stretch-backports main' | \
     tee /etc/apt/sources.list.d/backports.list && \
     apt-get update -y && \
-    apt-get install -y python-certbot-nginx -t stretch-backports
+    apt-get install -y python-certbot-nginx -t stretch-backports && \
+    sed -i 's/user \+nginx;/user root;/' /etc/nginx/nginx.conf
 
 EXPOSE 80 443
 
