--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,9 +8,11 @@ django-filter==2.2.0
 django-silk
 djangorestframework-camel-case==0.2.0
 djangorestframework>=3.9.1,<3.10
+drf-yasg[validation]
 ipython-genutils==0.2.0
 ipython==6.5.0
 jedi==0.12.1
+packaging
 parameterized==0.7.0
 parso==0.3.1
 pexpect==4.6.0
@@ -20,6 +22,7 @@ psycopg2-binary==2.7.4
 ptyprocess==0.6.0
 pytest-django==3.4.3
 pytest==3.9.3
+python-dateutil==2.8.1
 pytz==2018.5
 simplegeneric==0.8.1
 six==1.11.0
@@ -27,6 +30,3 @@ traitlets==4.3.2
 uwsgi
 wcwidth==0.1.7
 xmltodict==0.11.0
-
-drf-yasg[validation]
-packaging
