--- a/client/package.json
+++ b/client/package.json
@@ -161,6 +161,7 @@
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.1",
         "react-sortable-hoc": "^1.10.1",
+        "recharts": "^1.8.5",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-mock-store": "^1.5.3",
