Skip client build for now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           BRANCH=$(echo $GITHUB_SHA | head -c7)
           echo ::set-output name=branch::${BRANCH}
 
-      - name: 🐳 Prepare Docker
+      - name: 🐳 Prepare Docker (Server)
         id: server-prep
         run: |
           TAG=$(echo $GITHUB_SHA | head -c7)
@@ -42,13 +42,13 @@ jobs:
           echo ::set-output name=tag::${TAG}
           touch .env
 
-      - name: 🐳 Prepare Docker
-        id: client-prep
-        run: |
-          TAG=$(echo $GITHUB_SHA | head -c7)
-          IMAGE="docker.pkg.github.com/toggle-corp/worldvision-dvs/client"
-          echo ::set-output name=tagged_image::${IMAGE}:${TAG}
-          echo ::set-output name=tag::${TAG}
+      # - name: 🐳 Prepare Docker (Client)
+      #   id: client-prep
+      #   run: |
+      #     TAG=$(echo $GITHUB_SHA | head -c7)
+      #     IMAGE="docker.pkg.github.com/toggle-corp/worldvision-dvs/client"
+      #     echo ::set-output name=tagged_image::${IMAGE}:${TAG}
+      #     echo ::set-output name=tag::${TAG}
 
       - name: 🐳 Set up Docker Buildx
         id: buildx
@@ -75,22 +75,23 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      - name: 🐳 Build image (Client)
-        uses: docker/build-push-action@v2
-        with:
-          context: ./client/
-          builder: ${{ steps.buildx.outputs.name }}
-          file: ./client/Dockerfile
-          push: false # This would be set to true in a real world deployment scenario.
-          load: true
-          tags: ${{ steps.client-prep.outputs.tagged_image }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+      # - name: 🐳 Build image (Client)
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./client/
+      #     builder: ${{ steps.buildx.outputs.name }}
+      #     file: ./client/Dockerfile
+      #     push: false # This would be set to true in a real world deployment scenario.
+      #     load: true
+      #     tags: ${{ steps.client-prep.outputs.tagged_image }}
+      #     cache-from: type=local,src=/tmp/.buildx-cache
+      #     cache-to: type=local,dest=/tmp/.buildx-cache-new
 
       - name: 🕮 Validate if there are no pending django migrations.
         env:
           WV_BRANCH_NAME: ${{ steps.branch-head.outputs.branch }}
         run: |
+          docker-compose run --rm server /code/scripts/wait-for-it.sh db:5432
           docker-compose run --rm server python3 manage.py makemigrations --check --dry-run || {
             echo 'There are some changes to be reflected in the migration. Make sure to run makemigrations';
             exit 1;
@@ -102,21 +103,25 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_ID }}
           WV_BRANCH_NAME: ${{ steps.branch-head.outputs.branch }}
         with:
+          workingDirectory: ./server/
           coverageCommand: docker-compose run --rm server /code/scripts/run_tests.sh
           coverageLocations: |
-            ${{github.workspace}}/coverage/coverage.xml:coverage.py
+            ${{github.workspace}}/server/coverage.xml:coverage.py
 
-      - name: 🤞 Run Test (client)
-        run: |
-          echo "REACT_APP_MAPBOX_ACCESS_TOKEN=${REACT_APP_MAPBOX_ACCESS_TOKEN}\nREACT_APP_MAPBOX_STYLE=${REACT_APP_MAPBOX_STYLE}" >> .env
-          docker-compose run --rm client bash -c 'rsync -a --stats --ignore-existing /node_modules /code/ && yarn install && CI=false yarn build'
-        env:
-          WV_BRANCH_NAME: ${{ steps.branch-head.outputs.branch }}
-          REACT_APP_MAPBOX_ACCESS_TOKEN: 'pk.eyJ1IjoiYWRpdHlha2hhdHJpIiwiYSI6ImNqbHh0eHRnZzAzN3YzdnBpeWtua3l0dHIifQ.YVzzJ9GDQKAXtW3MyqnfSQ'
-          REACT_APP_MAPBOX_STYLE: 'mapbox://styles/deepmapz/cjc8oth8775tu2sr0eeymm3qv'
+      # - name: 🤞 Run Test (client)
+      #   run: |
+      #     echo "REACT_APP_MAPBOX_ACCESS_TOKEN=${REACT_APP_MAPBOX_ACCESS_TOKEN}\nREACT_APP_MAPBOX_STYLE=${REACT_APP_MAPBOX_STYLE}" >> .env
+      #     docker-compose run --rm client bash -c 'rsync -a --stats --ignore-existing /node_modules /code/ && yarn install && CI=false yarn build'
+      #   env:
+      #     WV_BRANCH_NAME: ${{ steps.branch-head.outputs.branch }}
+      #     REACT_APP_MAPBOX_ACCESS_TOKEN: 'pk.eyJ1IjoiYWRpdHlha2hhdHJpIiwiYSI6ImNqbHh0eHRnZzAzN3YzdnBpeWtua3l0dHIifQ.YVzzJ9GDQKAXtW3MyqnfSQ'
+      #     REACT_APP_MAPBOX_STYLE: 'mapbox://styles/deepmapz/cjc8oth8775tu2sr0eeymm3qv'
 
       - name: 🤞 Push images after succes
+        if: github.event_name == 'push'
         run: docker-compose push
+        env:
+          WV_BRANCH_NAME: ${{ steps.branch-head.outputs.branch }}
 
       - name: Deploy coverage to GH Pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
