--- a/production.yml
+++ b/production.yml
@@ -8,7 +8,7 @@ services:
       - ./data/postgres-data:/var/lib/postgresql/data
 
   server:
-    image: docker.pkg.github.com/toggle-corp/worldvision-dvs/server:release
+    image: ghcr.io/toggle-corp/worldvision-dvs/server:release
     env_file:
       - .env-prod
     volumes:
@@ -19,7 +19,7 @@ services:
       - db
 
   client:
-    image: docker.pkg.github.com/toggle-corp/worldvision-dvs/client:release
+    image: ghcr.io/toggle-corp/worldvision-dvs/client:release
     volumes:
       - client-static:/build/
     env_file:
