--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   server:
-    image: "docker.pkg.github.com/toggle-corp/worldvision-dvs/server:${WV_BRANCH_NAME:-develop}"
+    image: "ghcr.io/toggle-corp/worldvision-dvs/server:${WV_BRANCH_NAME:-develop}"
     build:
       context: ./server/
       cache_from:
@@ -27,7 +27,7 @@ services:
       - db
 
   client:
-    image: "docker.pkg.github.com/toggle-corp/worldvision-dvs/client:${WV_BRANCH_NAME:-develop}"
+    image: "ghcr.io/toggle-corp/worldvision-dvs/client:${WV_BRANCH_NAME:-develop}"
     build:
       context: ./client/
       cache_from:
